<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailFragment"
    android:background="@drawable/images">

    <TextView
        android:id="@+id/item_details"
        android:fontFamily="@font/dancing_script_bold"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:text="@string/item_deets"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Item Details"
        android:padding="10dp" />

    <TextView
        android:id="@+id/item_name"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_details"
        tools:text="Screwdrivers"
        android:padding="10dp"
        android:textColor="@color/black"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/item_price"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        tools:text="$5.50" />

    <TextView
        android:id="@+id/item_count_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/quantity_ordered"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_count"
        app:layout_constraintEnd_toStartOf="@+id/item_count"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="10dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_count"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/item_count_label"
        app:layout_constraintTop_toBottomOf="@+id/item_price"
        tools:text="5" />

    <TextView
        android:id="@+id/table_no_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/table_no"
        app:layout_constraintBaseline_toBaselineOf="@+id/table_no"
        app:layout_constraintEnd_toStartOf="@+id/table_no"
        android:padding="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/table_no"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/table_no_label"
        app:layout_constraintTop_toBottomOf="@+id/item_count"
        tools:text="5" />

    <Button
        android:id="@+id/delete_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/delete"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_no"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_item"
        android:src="@drawable/ic_edit"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>


